--- a/Tareas/tarea10.ipynb
+++ b/Tareas/tarea10.ipynb
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -577,31 +577,25 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Graph for Query 1\n",
+    "# visualización del Query 1\n",
     "plt.figure(figsize=(10, 6)) \n",
     "plt.bar(range(len(query1_result)), query1_result['total_amount'])\n",
     "plt.xlabel('Producto ID')\n",
     "plt.ylabel('Cantidad total')\n",
     "plt.title('Cantidad total por producto')\n",
-    "\n",
-    "# Set the custom tick labels for the x-axis\n",
     "plt.xticks(range(len(query1_result)), query1_result['ProductID'], rotation=45)\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# Select only the top 5 customers from the query2_result DataFrame\n",
+    "#visualización del Query 2\n",
     "top_5_customers = query2_result.head(5)\n",
     "\n",
-    "# Graph for Query 2 with only the top 5 customers\n",
     "plt.bar(range(len(top_5_customers)), top_5_customers['num_transactions'])\n",
     "plt.xlabel('Cliente ID')\n",
     "plt.ylabel('Número de transacciones')\n",
     "plt.title('Top 5 clientes con más transacciones')\n",
-    "\n",
-    "# Set the custom tick labels for the x-axis\n",
     "plt.xticks(range(len(top_5_customers)), top_5_customers['CustomerID'], rotation=45)\n",
-    "\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
