--- a/Tareas/tarea10.ipynb
+++ b/Tareas/tarea10.ipynb
@@ -108,15 +108,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cursor=conn.cursor()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -136,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to execute SQL queries and return the results as DataFrames\n",
+    "# funcion que recibe de parametro el query y guarda las bases de datos en dataframes de pandas\n",
     "def execute_query(sql_query):\n",
     "    cursor = connection.cursor()\n",
     "    cursor.execute(sql_query)\n",
@@ -146,7 +137,7 @@
     "    cursor.close()\n",
     "    return df\n",
     "\n",
-    "# Save each table as a DataFrame\n",
+    "# se utiliza la funcion para cada tabla\n",
     "transactions_df = execute_query(\"SELECT * FROM transactions_1k\")\n",
     "products_df = execute_query(\"SELECT * FROM products\")\n",
     "gasstations_df = execute_query(\"SELECT * FROM gasstations\")\n",
