--- a/Tareas/tarea10.ipynb
+++ b/Tareas/tarea10.ipynb
@@ -90,16 +90,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "host = \"localhost\"\n",
     "user = \"sandracavazos\"\n",
-    "password = \"ChispisLOML05\"\n",
+    "password = \"*******\"\n",
     "database = \"gas_trans_db\" \n",
     "\n",
-    "conn = mysql.connector.connect(\n",
+    "connection = mysql.connector.connect(\n",
     "        host=host,\n",
     "        user=user,\n",
     "        password=password,\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
